<resources>
    <string name="app_name">Bliss Challenge</string>
    <string name="service_status">The Service is %s!</string>
    <string name="service_ok">OK</string>
    <string name="service_down">Down</string>
    <string name="dialog_not_responding_title">Information</string>
    <string name="dialog_not_responding_positive_button_text">Try Again</string>
    <string name="dialog_not_responding_description">Sorry, our server is not responding</string>
    <string name="search">Search question…</string>
    <string name="share_results">Share Question List</string>
    <string name="share_question">Share Question</string>
    <string name="share_title">Share Via</string>
    <string name="share_negative_resume">Sorry, we can\'t share this right now, try again later</string>
    <string name="share_positive_resume">Shared successfully!</string>
    <string name="email">E-mail</string>_resumeText
    <string name="close">Close</string>
    <string name="send">Send</string>
    <string name="choices">Choices:</string>
    <string name="vote">Vote</string>
    <string name="back_to_list">Back to question list</string>
    <string name="results">Results:</string>
    <string name="votes">Votes: %d</string>
    <string name="information">Information</string>
    <string name="network_error">Sorry, we can\'t detect any Internet connection, please check your wifi or mobile data settings.</string>
</resources>
